Minor fixes
* Use a less horrible alarm sound
* Remove scrollbar by setting body margin to 0

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-html, body {
+html {
   font-size: 16px;
      height: 100%;
 }
@@ -15,6 +15,8 @@ body {
          font-family: 'FantasqueSansMonoRegular', sans-serif;
            font-size: 2rem;
              display: flex;
+              margin: 0;
+              height: 100%;
                color: #eee;
 }
 
